# alignSAR

./: DockerFile  DockerFile_LiCSAR_SNAP  Dockerfile  MANIFEST.in  Meta_info_extraction_global_local.py  README.md  bashrc_alignsar.sh  feature_extraction.py  pyproject.toml  signature_extraction.py  speckle_filt.py  utils.py  zenodo.json
.github/workflows/: draft_pdf.yml  tests.yml
MLscripts/Change Detection/Training/: Siamese_proto.ipynb
MLscripts/India - Object Detection/Training/: main.ipynb  training.py  yolov8x.pt.link.txt
MLscripts/Land Use Land Cover/data_preparation/: data_gathering.ipynb  data_preparation_NL_pixel_selection1.ipynb
MLscripts/Land Use Land Cover/training/: LULC_ANN_.ipynb
MLscripts/Netherlands - LULC/data_preparation/: data_preparation.py  main.ipynb
MLscripts/Netherlands - LULC/training/: main.ipynb
MLscripts/Object Detection/Data preparation/: data_preparation_IN.ipynb  pascalvoc_to_yolo.ipynb
MLscripts/Object Detection/Training/: yolo.ipynb  yolov8x.pt.link.txt
TS_dataset/: README.md  batch_LiCSBAS.sh  input_S1_files.txt  prelim_coh.tif  prelim_vel.tif
alignSAR_extension_InSAR_TS/: README.md  prelim_stc.tif
alignsar/: .gitignore  Meta_info_extraction_global_local.py  alignsar_utils.py  bashrc_alignsar  readme  resdata.py  signature_extraction.py  stac.py
alignsar/MLscripts/: readme.md
alignsar/MLscripts/India - Object Detection/Data preparation/: preprocessing.py
alignsar/MLscripts/Netherlands - LULC/: data_sample_links
alignsar/MLscripts/Netherlands - LULC/training/: train.py
alignsar/itc-doris_5_patch2023/: README.md
alignsar/itc-doris_5_patch2023/doris/: README.txt
alignsar/itc-doris_5_patch2023/doris/doris_core/: Makefile
alignsar/itc-doris_5_patch2023/doris/doris_stack/functions/: ESD_functions.py  ESD_ps_ds.py  baselines.py  burst_metadata.py  cleanup_stack.py  compassbearing.py  concatenate_decatenate.py  correct_ESD.py  do_deramp_SLC.py  do_reramp_SLC.py  get_ramp.py  get_winpos.py  load_shape_unzip.py  orbit_coordinates.py  precise_read.py  read_write_data.py  resdata.py  sentinel_dump_data_function.py  stack_cleanup.py  swath_metadata.py  xml_query.py
alignsar/itc-doris_5_patch2023/doris/doris_stack/main_code/: burst.py  doris_config.py  doris_main.py  doris_parameters.py  doris_parameters_path.py  doris_profile.py  doris_sentinel_1.py  dorisparameters.py  grs_config.py  grs_profile.py  image.py  jobs.py  resdata.py  stack.py  swath.py
alignsar/itc-doris_5_patch2023/doris/install/: init_cfg.py
alignsar/itc-doris_5_patch2023/doris/prepare_stack/: create_datastack_bash.py  create_dem.py  create_doris_input_xml.py  create_inputfiles.py  download_sentinel_data_orbits.py  prepare_datastack.py  prepare_datastack_main.py
alignsar/rdrcode/: input_card.txt  rdrCode_main.py  rdrCode_prep_ref_data.py  snap_rdrcode.py
alignsar/snap_graphs/: graph_geocoding_s1_geotiff.xml
alignsar/stac/: convert.py  gcps.py  georeference.py  points.py
alignsar_extension_InSAR_TS/: README.md  batch_LiCSBAS.sh  data_coverage.kml  prelim_rrms.tif  run_licsalert.py
examples/: data_links.txt  example.md  readme
examples/data/: data_links.txt
examples/jupyter_notebook_demo/: Random Forest demo (Groningen case).ipynb
itc-doris_5_patch2023/: Dockerfile  README.md
itc-doris_5_patch2023/doris/doris_core/: bk_messages.hh  cpxfiddle.cc
itc-doris_5_patch2023/doris/doris_stack/main_code/: doris_sentinel_1.py  single_master_stack.py
itc-doris_5_patch2023/doris/prepare_stack/: create_dem.py  create_doris_input_xml.py  download_sentinel_data_orbits.py  inputfile_template.xml
jupyter_notebook_demo/: README  jupyter_input_prepare.py  signature_extraction_demo.ipynb
misc/: Dockerfile1  readme
misc/alignsar_extension_InSAR_TS/: README.md
misc/post_analysis_example/MLscripts/Netherlands - LULC/: requirements.txt
misc/post_analysis_example/MLscripts/Netherlands - LULC/data_preparation/: main.ipynb
misc/post_analysis_example_using_MLscripts/: Readme
misc/post_analysis_example_using_MLscripts/MLscripts/India - Object Detection/Training/: main.ipynb
misc/post_analysis_example_using_MLscripts/MLscripts/Netherlands - LULC/India - Object Detection/Data preparation/: main.ipynb
misc/snap_graphs/: graph_export2tif_rdc.xml  readme
paper/: paper.bib  paper.md
paper/user_guide/: README  README.md
python/: alignsar.py
rdrcode/: input_radarcode  rdrCode_main.py  rdrCode_prep_ref_data.py  snap_rdrcode.py  utils.py
snap_graphs/: graph_geocoding_s1_geotiff.xml  graph_geocoding_s1_geotiff_with_DEM.xml
stac/: points.py  readme.txt
tests/: AlignSAR_test_main.py  Dockerfile  Meta_info_extraction_global_local.py  README  Readme  conftest.py  convert.py  georeference.py  readnc.ipynb  signature_extraction_case1.py  test_alignsar_utils.py  test_error_paths.py  test_get_dates.py  test_paths_and_meta.py  test_rdrcode_cli.py  test_signature_extraction_smoke.py  utils.py
tests/MLscripts/Netherlands - LULC/data_preparation/: data_preparation.py
tests/MLscripts/Poland - Change Detection/Training/: Siamese_proto_torch.ipynb
